# nigeria_geodata

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: deploy-mkdocs.yml  release.yml  tests.yml
api/datasources/grid3/async/: index.html
api/datasources/grid3/sync/: index.html
api/utils/enums/: index.html
api/utils/exceptions/: index.html
api/utils/logging/: index.html
benchmark/: index.html
changelog/: index.html
cli/: index.html
docs/: benchmark.md
docs/api/datasources/grid3/: async.md  sync.md
docs/api/utils/: enums.md  exceptions.md  logging.md
docs/cli/: index.md
docs/examples/: geodata.md  usage.md
examples/geodata/: index.html
examples/usage/: index.html
nigeria_geodata/: __init__.py  async_core.py  benchmark.py  cli.py  config.py  core.py  errors.py  grid3.py  settings.py  utils.py
nigeria_geodata/datasources/: __init__.py  base.py  grid3.py
nigeria_geodata/models/: common.py
nigeria_geodata/tests/: test_utils.py
nigeria_geodata/tests/datasources/: test_grid3.py
nigeria_geodata/utils/: __init__.py  api.py  common.py  enums.py  exceptions.py  geodata.py  logger.py  validators.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/datasources/grid3/async/: index.html
site/api/datasources/grid3/sync/: index.html
site/api/utils/enums/: index.html
site/api/utils/exceptions/: index.html
site/api/utils/logging/: index.html
site/benchmark/: index.html
site/search/: search_index.json
tests/: test_cli.py  test_utils.py
tests/datasources/: test_grid3.py
