[tool.poetry]
name = "nigeria-geodata"
version = "0.1.6.dev"
description = "Fast and efficient access to geospatial data for Nigeria. Ideal for developers and analysts working with Nigerian geospatial information."
license = "LICENSE"
authors = ["Emmanuel Jolaiya <jolaiyaemmanuel@gmail.com>"]
readme = "README.md"
keywords = ["Nigeria", "geodata", "Grid3", "geospatial"]
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
]

[tool.poetry.urls]
"Homepage" = "https://nigeria_geodata.github.io"
"Repository" = "https://github.com/jeafreezy/nigeria_geodata"
"Documentation" = "https://nigeria_geodata.github.io"
"Bug Tracker" = "https://github.com/jeafreezy/nigeria_geodata/issues"


[tool.hatch.build.targets.sdist]
exclude = [
  ".pytest_cache",
  ".ruff_cache",
  ".vscode",
  "docs/",
  "__pycache__",
  ".github",
  "poetry.lock",
  ".gitignore",
  ".pre-commit-config.yaml",
  "CHANGES.md",
  "CONTRIBUTING.md",
]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.0"
# optional dependencies
lonboard = { version = "^0.9.3", optional = true }
geopandas = { version = "^1.0.1", optional = true }
typer = { version = "^0.12.4", optional = true }


[tool.poetry.extras]
standard = ["lonboard", "geopandas", "typer"]
cli = ["typer"]


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
